[b][color=orange]v5.44[/color], 28.11.2022[/b][list]
[*]Fixed a C-Stack error[/list]